--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "BSoDium",
-  "name": "bsodium",
+  "short_name": "DZRootStack",
+  "name": "dzrootstack",
   "icons": [
     {
       "src": "favicon.ico",
